Thu Feb 27 20:50:08 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: small change
	* src/tds/mem.c: fix wrong memory clean causing core

Thu Feb 27 11:54:50 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* TODO: added other TODO

Tue Feb 25 22:07:08 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/server/login.c src/pool/pool.h
	- include sys/types.h for FreeBSD per today's list discussion
	* doc/userguide.sgml: fix grammar, clarify new ODBC configuration methods
	
Tue Feb 25 14:21:46 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: updated some odbc info

Sun Feb 23 15:40:51 EST 2003	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml updated for 0.62rc4.
	
Sat Feb 22 10:19:00 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- applied a patch for ASA 5.5 (spid as INT4) from Brian Bruns

Fri Feb 21 17:14:04 EST 2003	JK Lowden <jklowden@schemamania.org>	
	* configure.in set version according to date
	* src/tds/iconv.c src/tds/login.c shorten log string
	* src/tds/util.c add version to start of log

Fri Feb 21 11:03:56 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* win32/dev-cpp/FreeTDS.dev win32/dev-cpp/Makefile.win:
	- remove unwanted warnings

Fri Feb 21 10:43:13 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* win32/FreeTDS.def win32/config.h win32/freetds_sysconfdir.h:
	* win32/initnet.c win32/tds_sysdep_public.h:
	* win32/msvc6/FreeTDS.def win32/msvc6/config.h:
	* win32/msvc6/freetds_sysconfdir.h win32/msvc6/initnet.c:
	* win32/msvc6/tds_sysdep_public.h win32/dev-cpp/FreeTDS.dev (added):
	* win32/dev-cpp/Makefile.am (added):
	* win32/dev-cpp/Makefile.win (added) configure.in:
	* include/tds_sysdep_private.h src/odbc/convert_sql2string.c:
	* win32/Makefile.am win32/msvc6/FreeTDS.dsp:
	* win32/msvc6/Makefile.am:
	- added support for DevC++ environment (ODBC)
	- makefile for MingW32 (ODBC)
	- cleanup msvc6 project
