@@ -1,5 +1,5 @@
 TESTS		=	t0001 t0002 t0003 t0004 connect print date \
-			norowset
+			norowset funccall
 check_PROGRAMS	=	$(TESTS)
 
 t0001_SOURCES	=	t0001.c common.c common.h
@@ -10,6 +10,7 @@ connect_SOURCES	=	connect.c common.c common.h
 print_SOURCES	=	print.c common.c common.h
 date_SOURCES	=	date.c common.c common.h
 norowset_SOURCES	= norowset.c common.c common.h
+funccall_SOURCES	= funccall.c common.c common.h
 
 LIBS		=	-lodbc @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include -I$(ODBC_INC)
